using Unity.VisualScripting;

public static class Constants
{
    public static string LAYER_GROUND = "Ground";

    public static string AXIS_HORIZONTAL = "Horizontal";
    public static string AXIS_VERTICAL = "Vertical";

    public static string BOOL_STATE_IDLE = "isIdle";
    public static string BOOL_STATE_RUN = "isRun";
    public static string BOOL_STATE_JUMP = "isJump";
    public static string BOOL_STATE_FALL = "isFall";
    public static string BOOL_STATE_CROUCH = "isCrouch";
    public static string BOOL_STATE_CROUCH_TO_IDLE = "isCrouchToIdle";
}
